<!--
  ~ Copyright 2020 Thibault Seisel
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="album_art">Album art</string>
    <string name="action_albums">Albums</string>
    <string name="action_settings">Settings</string>
    <string name="action_artists">Artists</string>
    <string name="play_all_shuffled">Play all shuffled</string>
    <string name="action_search">Search</string>
    <string name="empty_songs">No songs</string>
    <string name="all_music">Tracks</string>
    <string name="empty_albums">No albums</string>
    <string name="prefs_category_appearance">Appearance</string>
    <string name="pref_theme_title">Theme</string>
    <string name="action_playlists">Playlists</string>
    <string name="action_shuffle_mode">Toggle shuffle mode</string>
    <string name="play_or_pause">Play or pause</string>
    <string name="skip_previous">Skip to previous</string>
    <string name="skip_next">Skip to next</string>
    <string name="empty_artist">No artists</string>
    <string name="action_delete">Delete</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="delete_dialog_title">Delete from library?</string>
    <string name="empty_playlist">No playlist</string>
    <string name="delete_dialog_message">This song will be deleted from your device.</string>
    <plurals name="deleted_songs_confirmation">
        <item quantity="one">The track has been deleted.</item>
        <item quantity="other">Those tracks have been deleted.</item>
    </plurals>

    <plurals name="number_of_tracks">
        <item quantity="one">%d track</item>
        <item quantity="other">%d tracks</item>
    </plurals>

    <plurals name="number_of_selected_tracks">
        <item quantity="one">%d track selected</item>
        <item quantity="other">%d tracks selected</item>
    </plurals>

    <plurals name="cleanup_confirmation_title">
        <item quantity="one">Delete %d track?</item>
        <item quantity="other">Delete %d tracks?</item>
    </plurals>

    <string name="playlist_created">Created new playlist \"%1$s\".</string>

    <plurals name="tracks_added_to_playlist">
        <item quantity="one">%1$d track added to playlist \"%2$s\"</item>
        <item quantity="other">%1$d tracks added to playlist "\%2$s\"</item>
    </plurals>

    <string name="song_item_subtitle">%1$s \u2022 %2$s</string>
    <string name="action_edit_playlist">Edit playlist</string>
    <string name="action_delete_playlist">Delete playlist</string>
    <string name="delete_playlist_dialog_title">Delete the playlist \"%s\"?</string>
    <string name="external_storage_permission_rationale">You won\'t be able to play tracks stored on the device\'s storage unless you grant permission to access it.</string>
    <string name="action_condensed_play_shuffled">Read shuffled</string>
    <string name="action_repeat_mode">Toggle repeat mode</string>
    <string name="action_create_playlist">New playlist</string>
    <string name="hint_playlist_title">Playlist title</string>
    <string name="last_played_description">Last played %1$s</string>
    <string name="never_played">Never played</string>
    <string name="pref_theme_light">Light</string>
    <string name="pref_theme_dark">Dark</string>
    <string name="pref_theme_battery">Set by Battery Saver</string>
    <string name="pref_theme_system">Use system default</string>
    <string-array name="prefs_theme_titles">
        <item>@string/pref_theme_light</item>
        <item>@string/pref_theme_dark</item>
        <item>@string/pref_theme_battery</item>
        <item>@string/pref_theme_system</item>
    </string-array>
    <string name="action_cleanup_title">Free storage space</string>
    <string name="cleanup_confirmation_message">This operation cannot be undone.</string>
    <string name="search_hint">Find a track, an artist…</string>
    <string name="action_clear">Clear</string>
    <string name="description_more_actions">More actions</string>
    <string name="action_dev_options">Developer Options</string>
    <string name="dev_sync_summary_waiting">Waiting for network to be available…</string>
    <string name="dev_sync_summary_running">Sync is running…</string>
    <string name="dev_sync_summary_success">Synced successfully</string>
    <string name="dev_sync_summary_failure">Sync failed</string>
    <string name="pref_title_spotify_sync">Sync with Spotify</string>
    <string name="pref_title_audio_analysis">Audio analysis</string>
    <string name="pref_summary_audio_analysis">Select tracks based on their audio features</string>
    <string name="action_manage_space">Manage space</string>
    <string name="clear_all_data">Clear all data</string>
    <plurals name="number_of_playlists">
        <item quantity="one">%1$d playlist</item>
        <item quantity="many">%1$d playlists</item>
    </plurals>
    <string name="label_delete_all_playlists">Your own selections of tracks. You may want to manage individual playlists in the playlist tab instead.</string>
    <string name="action_delete_playlists">Delete playlists</string>
    <string name="label_clear_sync_data">Audio metadata that are periodically fetched from Spotify to create smart selections of tracks.</string>
    <string name="action_clear_sync_data">Clear sync data</string>
    <string name="label_clear_usage_stats">Usage statistics that are collected to create smarter playlists. Deleting those will reset the list of tracks you like the most. Those data are never sent to a remote server.</string>
    <string name="action_clear_usage_stats">Reset usage data</string>
    <string name="label_clear_user_prefs">Saved settings that you have configured or based on your usage: last played media, playback parameters, app theme. Though we do not suggest doing so, you may want to reset those settings if something goes wrong.</string>
    <string name="action_reset_prefs">Reset user preferences</string>
    <string name="label_clear_all_data">Total data used by Odeon, including user-defined playlists, collected data, cached album artworks and saved settings.</string>
</resources>
