<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2019 Thibault Seisel
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_24dp"
        android:title="@string/action_search"
        android:visible="false"
        app:showAsAction="ifRoom|collapseActionView"
        tools:visible="true" />

    <item
        android:id="@+id/action_shuffle"
        android:icon="@drawable/ic_shuffle_24dp"
        android:title="@string/play_all_shuffled"
        android:titleCondensed="@string/action_condensed_play_shuffled"
        app:showAsAction="never" />

    <item
        android:id="@+id/start_cleanup"
        android:title="@string/action_cleanup_title"
        app:showAsAction="never" />

    <item
        android:id="@+id/activity_settings"
        android:icon="@drawable/ic_settings_24dp"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>