<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorBackgroundFloating"
    tools:ignore="Overdraw">

    <include layout="@layout/scene_playerview_closed" />

    <ImageView
        android:id="@+id/bigArt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonBar"
        android:layout_below="@id/playbar"
        android:contentDescription="@string/album_art"
        android:scaleType="centerCrop"
        tools:src="@drawable/ic_audiotrack_24dp"/>

    <LinearLayout
        android:id="@+id/buttonBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="16dp">

        <!-- TODO Remplacer ça par un bouton, quand fonctionnalité viendra -->
        <android.support.v4.widget.Space
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:padding="16dp"/>

        <ImageView
            android:id="@+id/btn_previous"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_weight="2"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/skip_previous"
            android:padding="8dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_skip_previous_24dp"/>

        <ImageView
            android:id="@+id/main_play_pause"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_weight="2"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/play_or_pause"
            app:srcCompat="@drawable/level_play_pause_filled"/>

        <ImageView
            android:id="@+id/btn_next"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_weight="2"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/skip_next"
            android:padding="8dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_skip_next_24dp"/>

        <ImageView
            android:id="@+id/btn_random"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/action_random"
            android:padding="16dp"
            app:srcCompat="@drawable/ic_shuffle_24dp"/>
    </LinearLayout>

</RelativeLayout>