<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2020 Thibault Seisel
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="32dp"
    android:paddingEnd="32dp">

    <ImageView
        android:id="@+id/now_playing_artwork"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/album_art"
        app:layout_constraintBottom_toTopOf="@id/now_playing_title"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <SeekBar
        android:id="@+id/now_playing_progress"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/now_playing_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/now_playing_artwork"
        tools:progress="100" />

    <TextView
        android:id="@+id/now_playing_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textAppearance="@style/TextAppearance.Odeon.Overline"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/now_playing_progress"
        app:layout_constraintStart_toStartOf="@id/now_playing_progress"
        tools:text="00:00" />

    <TextView
        android:id="@+id/now_playing_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textAppearance="@style/TextAppearance.Odeon.Overline"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/now_playing_progress"
        app:layout_constraintEnd_toEndOf="@id/now_playing_progress"
        tools:text="05:00" />

    <TextView
        android:id="@+id/now_playing_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="2"
        android:textAppearance="@style/TextAppearance.Odeon.Headline5"
        app:layout_constraintBottom_toTopOf="@id/master_play_pause"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/now_playing_progress"
        tools:text="The 2nd Law: Isolated System" />

    <ImageView
        android:id="@+id/repeat_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="?selectableItemBackgroundBorderless"
        android:contentDescription="@string/action_repeat_mode"
        android:padding="12dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_level_repeat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/skip_prev_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/now_playing_title" />

    <ImageView
        android:id="@+id/skip_prev_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="?selectableItemBackgroundBorderless"
        android:contentDescription="@string/skip_previous"
        android:padding="8dp"
        android:src="@drawable/ic_skip_previous_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/master_play_pause"
        app:layout_constraintStart_toEndOf="@+id/repeat_button"
        app:layout_constraintTop_toBottomOf="@id/now_playing_title" />

    <fr.nihilus.music.view.FloatingPlayPauseButton
        android:id="@+id/master_play_pause"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:contentDescription="@string/play_or_pause"
        android:src="@drawable/level_play_pause"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/skip_next_button"
        app:layout_constraintStart_toEndOf="@+id/skip_prev_button"
        app:layout_constraintTop_toBottomOf="@id/now_playing_title"
        app:maxImageSize="36dp"
        app:tint="?colorOnSecondary" />

    <ImageView
        android:id="@+id/skip_next_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="?selectableItemBackgroundBorderless"
        android:contentDescription="@string/skip_next"
        android:padding="8dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_skip_next_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/shuffle_button"
        app:layout_constraintStart_toEndOf="@+id/master_play_pause"
        app:layout_constraintTop_toBottomOf="@id/now_playing_title" />

    <ImageView
        android:id="@+id/shuffle_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="?selectableItemBackgroundBorderless"
        android:contentDescription="@string/action_shuffle_mode"
        android:padding="12dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_shuffle_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/skip_next_button"
        app:layout_constraintTop_toBottomOf="@id/now_playing_title" />

</androidx.constraintlayout.widget.ConstraintLayout>